--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -744,6 +744,12 @@
   <data name="Settings_Cache_Title" xml:space="preserve">
     <value>Cache</value>
   </data>
+  <data name="Settings_Debug_EnableDebugSettings" xml:space="preserve">
+    <value>Aktivera inställningar för felsökning</value>
+  </data>
+  <data name="Settings_Debug_EnableLogToFile" xml:space="preserve">
+    <value>Aktivera loggning (kräver omstart)</value>
+  </data>
   <data name="Settings_Downloads_AutoRemove_Description" xml:space="preserve">
     <value>Ta automatisk bort nedladdade avsnitt som är spelade efter:</value>
   </data>
