Adds UI in Windows for open log files.

--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -756,6 +756,9 @@
   <data name="Settings_Debug_LogFiles_NoFiles" xml:space="preserve">
     <value>Det finns inga loggfiler.</value>
   </data>
+  <data name="Settings_Debug_LogFiles_Open" xml:space="preserve">
+    <value>Öppna</value>
+  </data>
   <data name="Settings_Debug_LogFiles_RemoveOldLogFiles" xml:space="preserve">
     <value>Radera gamla loggfiler</value>
   </data>
