--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About_BuildDetails" xml:space="preserve">
+    <value>Den här versionen skapades {0} {1}.</value>
+  </data>
   <data name="About_Credits_Line1" xml:space="preserve">
     <value>…Sveriges Radio som gör sådana här projekt möjliga.</value>
   </data>
