Adds support for decreasing sleep timer.

--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -966,4 +966,7 @@
   <data name="SleepTimer_Increase_5min" xml:space="preserve">
     <value>+5 min</value>
   </data>
+  <data name="SleepTimer_Decrease_5min" xml:space="preserve">
+    <value>-5 min</value>
+  </data>
 </root>
