--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -972,4 +972,10 @@
   <data name="SleepTimer_Title" xml:space="preserve">
     <value>Sovtimer</value>
   </data>
+  <data name="Favorites_ViewMode_Album" xml:space="preserve">
+    <value>Visa som album</value>
+  </data>
+  <data name="Favorites_ViewMode_List" xml:space="preserve">
+    <value>Visa som lista</value>
+  </data>
 </root>
