--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -969,4 +969,22 @@
   <data name="SleepTimer_Title" xml:space="preserve">
     <value>Sovtimer</value>
   </data>
+  <data name="Services_Download_Description" xml:space="preserve">
+    <value>Visar status på pågående nedladdningar.</value>
+  </data>
+  <data name="Services_Download_Name" xml:space="preserve">
+    <value>Nedladdning pågår</value>
+  </data>
+  <data name="Services_Player_Description" xml:space="preserve">
+    <value>Visar information när radio eller poddar spelas.</value>
+  </data>
+  <data name="Services_Player_Name" xml:space="preserve">
+    <value>Uppspelare</value>
+  </data>
+  <data name="Services_SleepTimer_Description" xml:space="preserve">
+    <value>Visar status på sovtimer.</value>
+  </data>
+  <data name="Services_SleepTimer_Name" xml:space="preserve">
+    <value>Sovtimer</value>
+  </data>
 </root>
