Adds support for stopping playing.

--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -648,6 +648,9 @@
   <data name="Player_Previous" xml:space="preserve">
     <value>Föregående</value>
   </data>
+  <data name="Player_Stop" xml:space="preserve">
+    <value>Avsluta uppspelning</value>
+  </data>
   <data name="Playlist_ButtonMove" xml:space="preserve">
     <value>Flytta</value>
   </data>
