--- a/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
+++ b/Source/Pekspro.RadioStorm.UI/Resources/Strings.resx
@@ -360,6 +360,12 @@
   <data name="Episodes_UnknownGroupName" xml:space="preserve">
     <value>Övrigt</value>
   </data>
+  <data name="Episode_SongList_NoData" xml:space="preserve">
+    <value>Inga låtar hittades.</value>
+  </data>
+  <data name="Episode_SongList_Title" xml:space="preserve">
+    <value>Låtlista - {0}</value>
+  </data>
   <data name="Favorites_AddRecommendedFavorites" xml:space="preserve">
     <value>Lägg till några godbitar</value>
   </data>
